[[bin]]
name = "nearest-exit-from-entrance-in-maze"
path = "src/nearest-exit-from-entrance-in-maze/main.rs"

[[bin]]
name = "missing-numbers-sum"
path = "src/missing-numbers/sum/main.rs"

[[bin]]
name = "missing-numbers-array"
path = "src/missing-numbers/array/main.rs"

[[bin]]
name = "number-of-visible-people-in-a-queue"
path = "src/number-of-visible-people-in-a-queue/main.rs"

[package]
name = "leetcoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
